# kaya-remit

./: .gitignore  api_reference.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/models/: budget.py  goal.py  notification.py  transaction.py  users.py  wallet.py
backend/app/routes/: auth.py  budget.py  goal.py  notification.py  user.py  wallet.py
backend/app/schemas/: auth_schema.py  budget_schema.py  goal_schema.py  user_schema.py  wallet_schema.py
backend/app/utils/: auth.py
backend/tests/: conftest.py  test_auth.py  test_budget_goal.py  test_notification.py  test_security_performance.py  test_wallet.py
frontend/: index.html  package.json
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue
