[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-limiter>=4.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow>=4.3.0",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
]
